--- a/requirements.txt
+++ b/requirements.txt
@@ -21,15 +21,15 @@ typing-extensions>=4.0.0
 
 # Optional: Enhanced scientific computing capabilities
 # Uncomment these lines if you need additional functionality
-# sympy>=1.9.0  # For symbolic quantum state manipulation
-# pandas>=1.3.0  # For data analysis and results processing
-# seaborn>=0.11.0  # For advanced statistical visualizations
-# plotly>=5.0.0  # For interactive visualizations
+sympy>=1.9.0  # For symbolic quantum state manipulation
+pandas>=1.3.0  # For data analysis and results processing
+seaborn>=0.11.0  # For advanced statistical visualizations
+plotly>=5.0.0  # For interactive visualizations
 # jupyter>=1.0.0  # For notebook-based development
 # ipywidgets>=7.6.0  # For interactive widgets in notebooks
 
 # Development and Testing (optional)
-# pytest>=6.0.0
-# pytest-cov>=2.0.0
-# black>=21.0.0
-# flake8>=3.9.0
+pytest>=6.0.0
+pytest-cov>=2.0.0
+black>=21.0.0
+flake8>=3.9.0
