Update .gitignore for IDE, reports, and markdown files
Added rules to ignore .cursor/ (Cursor IDE), reports/ directory, and all markdown files (*.md) to prevent them from being tracked in version control.

--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,12 @@ cython_debug/
 .qiskit/
 config.ini
 secrets.json
+
+# Cursor IDE
+.cursor/
+
+# Reports folder
+reports/
+
+# Markdown files
+*.md
