Bounded Cross-Basis Prediction: QSV-Calibrated Validation Framework
This commit introduces a comprehensive validation framework for Quantum Eye's
bounded cross-basis prediction capabilities, implementing the methodology described
in the paper 'Bounded Cross-Basis Prediction from Single-Basis Counts via Frequency
Signatures' (Quantum Eye I).

## Core Implementation

### Modified Core Components:
- quantum_eye_adapter.py: Enhanced adapter with QSV-calibrated interval prediction
  and abstention logic based on QSV threshold (tau = 0.1)
- ucp.py: Updated UCPIdentity implementation with QSV parameter computation
  (P, S, E, Q) directly from measurement counts
- transform.py: Core transformation logic supporting frequency signature analysis
- compose.qe.yaml: Updated Docker compose configuration for validation workflows

### New Validation Test Suite:

1. test_bounded_cross_basis_validation.py (1,379 lines)
   - QSV-calibrated bounded cross-basis prediction validation
   - Four-phase protocol:
     * Phase 1: Calibration - Builds w(QSV) mapping from 50 circuits
     * Phase 2: Evaluation - Validates 95% coverage on 50 held-out circuits
     * Phase 3: Non-injectivity trap - Tests circuits with same Z, different X/Y
     * Phase 4: Negative control - Shuffles calibration curve to verify harness sensitivity
   - Implements bounded interval prediction [L_X, U_X] with shot-noise floor
   - Real hardware validation on ibm_fez (qubits 87, 88)
   - 4096 shots per measurement, QSV threshold tau = 0.1

2. test_frequency_ablation_causality.py
   - Causal validation via frequency ablations
   - Tests whether frequency-domain features causally determine prediction quality
   - Simulator-only adversarial validation

3. test_identifiability_sameZ_different_invariant.py
   - Bounded identifiability tests
   - Validates that same Z marginals can yield different recoverable invariants
   - Demonstrates non-injectivity of single-basis inference maps

4. test_noise_shots_regime_map.py
   - 

--- a/compose.qe.yaml
+++ b/compose.qe.yaml
@@ -8,9 +8,11 @@ services:
       - FFSIM_PIP_EXTRA
       - PYTHONPATH=/home/jovyan/qe-runner:/home/jovyan/persistent-volume:/home/jovyan/work
     volumes:
-      - ./ffsim/persistent-volume:/home/jovyan/persistent-volume
-      - ./adapters:/home/jovyan/work/adapters
-      - ./qe-runner:/home/jovyan/qe-runner
+      # NOTE: docker compose resolves relative paths from the *first* compose file's directory
+      # (here: `ffsim/compose.yaml`), so these are intentionally relative to `Quantum-Eye/ffsim/`.
+      - ./persistent-volume:/home/jovyan/persistent-volume
+      - ../adapters:/home/jovyan/work/adapters
+      - ../qe-runner:/home/jovyan/qe-runner
     entrypoint: ["python", "/home/jovyan/qe-runner/run_experiment.py"]
     command: []
 
